feat: Criação de rotas e handlers para status. AB#30
